made h1 on index page to respond to small screen(phones)

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -362,4 +362,7 @@ body {
     #modalImgDisplayLocation {
         height: 40vh;
     }
+    #mainJumbotron h1 {
+        font-size: 3rem;
+    }
 }
