--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
 
-<section id="aboutMeSection">
+    <section id="aboutMeSection">
         <div class="container-fluid">
             <div class="row d-flex justify-content-around my-5">
                 <div class="container-fluid">
@@ -16,8 +16,7 @@
 
                         <h1 class="card-title text-center"> Paul Lupu Dentist</h1>
 
-                        <img id="photoDemoText" class="float-right" src="https://drlupupaul.s3.eu-central-1.amazonaws.com/picround.jpg" alt="profile photo" width="150px">
-
+                        <img id="photoDemoText" class="float-right" src="/assets/picround.png" alt="profile photo" width="150px">
 
                         <p class="mt-5 firstLetterBig">Donec mattis, dolor eget tincidunt fringilla, ipsum dui consectetur enim, in auctor velit nibh nec sem. Vivamus nec arcu sed neque mattis varius quis quis metus. Cras et pharetra metus. Fusce ut maximus lacus. Fusce id nisl vel
                             nisi aliquam eleifend eu a felis. Nunc non nulla in sapien lacinia auctor eget nec odio. Nullam consectetur fermentum leo, nec bibendum risus convallis aliquam. Proin in orci non ex ullamcorper dapibus quis vel odio.</p>
@@ -40,7 +39,7 @@
             </div>
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-8 mt-5">
-                    <div> 
+                    <div>
                         <div class="d-flex justify-content-center">
                             <a href="https://www.facebook.com/lupu.paul1" target="_blank "><i class="fab fa-facebook-square icons"></i></a>
                             <a href="https://www.instagram.com/lupu.paul.rct/?hl=en" target="_blank"><i class="fab fa-instagram icons"></i></a>
@@ -49,5 +48,5 @@
                 </div>
             </div>
         </div>
-</section>
-<% include partials/footer %>
+    </section>
+    <% include partials/footer %>
