--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
 
 <body>
 
-<section>
+    <section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 px-0">
@@ -51,10 +51,10 @@
                                     <li class="nav-item ">
                                         <a id="endodont" class="nav-link" href="/endo">Endodontics<span class="sr-only">Theory about Endodontics</span></a>
                                     </li>
-                                     <li class="nav-item ">
+                                    <li class="nav-item ">
                                         <a id="endodont" class="nav-link" href="/casestudies">Case Studies<span class="sr-only">Theory about Endodontics</span></a>
                                     </li>
-                                    <li class="nav-item dropdown">
+                                    <li class="nav-item dropdown d-none">
                                         <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown">Others</a>
                                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                                             <a id="case1" class="dropdown-item" href="#">Link</a>
