--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 
 
-<section id="contactPage">
+    <section id="contactPage">
         <div id='jumbotronContact' class="jumbotron"></div>
         <div class="container-fluid">
             <div class="row d-flex justify-content-center footerSpace mt-5">
@@ -23,16 +23,17 @@
                         </p>
                     </div>
                 </div>
-                <div  class="col-md-5 col-lg-5 px-0 mt-5 bg-transparent">
+                <div class="col-md-5 col-lg-5 px-0 mt-5 bg-transparent">
                     <div id="contactDescription" class="card-body text-center">
                         <div class="mt-3">
-                            <img class='img-fluid imgContact' src="https://drlupupaul.s3.eu-central-1.amazonaws.com/picMicroContact.jpg"  alt="" >
+                            <img class='img-fluid imgContact' src="/assets/picMicroContact.jpg" alt="">
                         </div>
                         <div class='bg-light boxShadow'>
                             <h1 class="card-title mt-5">Get in touch</h1>
                             <hr>
                             <div class="card-text">
-                                <p class="my-0">Donec mattis, dolor eget tincidunt fringilla, ipsum dui consectetur enim, in auctor velit nibh nec sem. Vivamus nec arcu sed neque mattis varius quis quis metus. Cras et pharetra metus. Fusce ut maximus lacus. Fusce id nisl
+                                <p class="my-0">Donec mattis, dolor eget tincidunt fringilla, ipsum dui consectetur enim, in auctor velit nibh nec sem. Vivamus nec arcu sed neque mattis varius quis quis metus. Cras et pharetra metus. Fusce ut maximus lacus. Fusce id
+                                    nisl
                             </div>
                         </div>
                     </div>
@@ -41,4 +42,4 @@
         </div>
     </section>
 
-<%include partials/footer %>
+    <%include partials/footer %>
